# models/regreq.go
@@ -1,0 +1,6 @@
+package models
+
+type RegisterReq struct {
+	Name     string `json:"name"`
+	Password string `json:"password"`
+}
